# AIIC

./: .env.example  .gitignore  AGENTS.md  README.md  TASKS.md  docker-compose.local-cache.yml  docker-compose.yml
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  ghcr.yml
backend/: .dockerignore  Dockerfile  Dockerfile.local-cache  pyproject.toml
backend/app/: main.py
backend/app/api/: attachments.py  auth.py  chat.py  deps.py  face.py  interviews.py  providers.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: entities.py
backend/app/prompts/: interview_answer_feedback.md  interview_final_report.md  interview_first_question.md  system.md
backend/app/schemas/: attachments.py  auth.py  chat.py  face.py  interviews.py  providers.py
backend/app/services/: interviews.py  llm.py  openrouter.py  volcengine_face.py
backend/tests/: conftest.py  test_attachments.py  test_auth.py  test_chat.py  test_face.py  test_health.py  test_interview_services.py  test_interviews.py  test_openrouter.py  test_researchmocker_prompt_config.py
demo/: Project or research experience.md  Self-introduction.md  Target direction.md  Weak points.md
docs/: 2026-05-22_项目准备说明_.md  2026-05-24_16 小时项目挑战说明.md  2026-05-24_项目挑战说明_.md  demo_script.md  design.md  iteration_log.md  product_memo_notes.md
docs/火山引擎-OmniHuman-1.5/: 产品介绍.md  (+3 more)
frontend/: Dockerfile  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
scripts/: build-backend.sh  up-with-cache.sh
(+13 files in other folders)
