[project]
name = "researchmocker-backend"
version = "0.1.0"
description = "FastAPI backend for the ResearchMocker interview workflow"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=15.0",
    "sqlalchemy>=2.0.30",
    "pydantic-settings>=2.4.0",
    "bcrypt>=5.0.0",
    "python-multipart>=0.0.9",
    "litellm>=1.50.0",
    "cryptography>=48.0.0",
    "httpx[socks]>=0.27.0",
    "pymupdf>=1.24.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
